/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    application
    id("org.openjfx.javafxplugin") version "0.1.0" //my-note-daiane
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

    // This dependency is used by the application.
    implementation(libs.guava)

    implementation(files("lib/jtds-1.3.1.jar"))
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        //languageVersion = JavaLanguageVersion.of(21)
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = "org.view.AtendenteFronteira"
    //mainClass = "org.view.Main"
}
javafx {//my-note-daiane
    version = "17.0.15"//my-note-daiane
    modules = listOf("javafx.controls", "javafx.fxml")//my-note-daiane
}//my-note-daiane
